Ingress-deployment/result-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    name: result-service
    app: demo-voting-app
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  selector:
    name: result-app-pod
    app: demo-voting-app
