Ingress-deployment/result-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-service
spec:
  ingressClassName: nginx
  rules:
  - host: 192.168.3.80.sslip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: result-service
            port:
              number: 80
