Ingress-deployment/voting-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-service
spec:
  # ingressClassName is necessary since v1.22 
  ingressClassName: nginx
  rules:
  - host: 192.168.3.80.xip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: voting-service
            port:
              number: 80
